# rust-multibase

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: build.yml  rust.yml
benches/: multibase.rs
cli/: Cargo.toml  main.rs
src/: base.rs  decodable.rs  encodable.rs  encoding.rs  error.rs  impls.rs  lib.rs
tests/: lib.rs  tests.rs
