[package]
name = "multibase"
version = "0.8.0"
authors = ["Friedel Ziegelmayer <dignifiedquire@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "multibase in rust"
homepage = "https://github.com/multiformats/rust-multibase"
repository = "https://github.com/multiformats/rust-multibase"
keywords = ["ipld", "ipfs", "multihash", "multibase", "cid"]

[dependencies]
base-x = { git = "https://github.com/whalelephant/base-x-rs", branch = "no_std", default-features = false }
data-encoding = { version = "2.3", default-features = false, features = ["alloc"] }
lazy_static = { features = ["spin_no_std"], version = "1.4.0" }

[dev-dependencies]
criterion = "0.3"
rand = "0.7"

[[bench]]
name = "multibase"
harness = false

[workspace]
members = ["cli"]

[features]
default = ["std"]
std = []