[package]
name = "multibase"
version = "0.9.0"
authors = ["Friedel Ziegelmayer <dignifiedquire@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "multibase in rust"
homepage = "https://github.com/multiformats/rust-multibase"
repository = "https://github.com/multiformats/rust-multibase"
keywords = ["ipld", "ipfs", "multihash", "multibase", "cid"]

[features]
default = ["std"]
std = []

[dependencies]
base-x = { git = "https://github.com/whalelephant/base-x-rs", branch = "no_std", default-features = false }
data-encoding = { version = "2.3.1", default-features = false, features = ["alloc"] }
data-encoding-macro = "0.1.9"

[dev-dependencies]
criterion = "0.3"
rand = "0.7"

# [crates-io.patch]
# base-x = { git = "https://github.com/whalelephant/base-x-rs", branch = "no_std", default-features = false }

[[bench]]
name = "multibase"
harness = false

[workspace]
members = ["cli"]
