[package]
name = "multibase-cli"
version = "0.1.0"
authors = [
    "David Craven <david@craven.ch>",
    "Qinxuan Chen <koushiro.cqx@gmail.com>",
]
edition = "2018"

[dependencies]
anyhow = "1.0"
env_logger = "0.8"
log = "0.4"
multibase = { path = ".." }
structopt = "0.3"

[[bin]]
name = "multibase"
path = "main.rs"
