[package]
name = "multibase-cli"
version = "0.1.0"
authors = [
    "David Craven <david@craven.ch>",
    "Qinxuan Chen <koushiro.cqx@gmail.com>",
]
edition = "2018"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.53", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
multibase = { path = ".." }

[[bin]]
name = "multibase"
path = "main.rs"
